# spdlog_test

./: .gitignore  CMakeLists.txt  README.md
proj1/: CMakeLists.txt
proj1/src/: lib_log.cpp  lib_log.hpp  main.cpp
proj2/: CMakeLists.txt
proj2/src/: logger.hpp  main.cpp
src/: logger.hpp  main.cpp
src/spdlog/: common.h  logger.h
